=== HEAD

* Add schema_caching extension, to speed up loading a large number of models by loading cached schema information from a file (jeremyevans)

* Add Dataset#multi_replace on MySQL, allowing you to REPLACE multiple rows in a single query (danielb2) (#452)

* Double speed of Model#new with empty hash, and quadruple speed of Model#set with empty hash (jeremyevans)

* Allow SQL::QualifiedIdentifier objects to contain arbitrary Sequel expressions (jeremyevans)

* Add pg_hstore_ops extension, for easily calling PostgreSQL hstore functions and operators (jeremyevans)

* Add Sequel::SQL::Wrapper class for easier dealing with wrapper objects (jeremyevans)

* Add pg_hstore extension, for dealing with the PostgreSQL hstore (key/value table) type (jeremyevans)

* Add Database#type_supported? method on PostgreSQL for checking if the given type symbol/string is supported (jeremyevans)

* Convert Java::OrgPostgresqlUtil::PGobject instances to ruby strings in jdbc/postgres type conversion (jeremyevans)

* Allow PlaceholderLiteralString objects to store placeholder string as an array for improved performance (jeremyevans)

* Work around ruby-pg bugs 111 (Time/DateTime fractional seconds) and 112 ("\0" in bytea) in bound variable arguments (jeremyevans) (#450)

* Handle fractional seconds correctly for time type on jdbc/postgres (jeremyevans)

* Add pg_array_ops extension, for easily calling PostgreSQL array functions and operators (jeremyevans)

* Add SQL::Subscript#[] for using nested subscripts (accessing member of multi-dimensional array) (jeremyevans)

* Add Model.cache_anonymous_models accessor so you can disable the caching of classes created by Sequel::Model() (jeremyevans)

* Convert PostgreSQL JDBC arrays to Ruby arrays in the jdbc/postgres adapter (jeremyevans)

* The typecast_on_load extension now works correctly when saving new model objects when insert_select is enabled (jeremyevans)
